--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
+/* General */
+html {
+    box-sizing: border-box;
+}
+.container {
+    max-width: 960px;
+}
+
 /* Navbar */
+nav.navbar {
+    padding: 0;
+}
+
+ul {
+    width: 100%;
+}
+
+Header {
+    border-bottom: 2px solid #ccc;
+}
 #nav-brand {
     background-color: #4aaaa5;
+    color: #fff;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 90px;
+    width: 250px;
+    text-align: center;
+    float: left;
 }
